fix: fixed active background dark mode

--- a/src/components/NavLink/navlink.module.css
+++ b/src/components/NavLink/navlink.module.css
@@ -10,7 +10,7 @@
 
 .active {
   position: relative;
-  background: var(--primary-accent);
+  background: var(--main-accent);
   color: var(--primary-background);
 }
 
